@@ -1,9 +1,9 @@
 <?php
 /**
 * Smarty PHPunit tests compilation of compiler plugins
-* 
+*
 * @package PHPunit
-* @author Uwe Tews 
+* @author Uwe Tews
 */
 
 /**
@@ -15,12 +15,12 @@ class CompileCompilerPluginTests extends PHPUnit_Framework_TestCase {
         $this->smarty = SmartyTests::$smarty;
         SmartyTests::init();
         $this->smarty->force_compile = true;
-    } 
+    }
 
     public static function isRunnable()
     {
         return true;
-    } 
+    }
 
     /**
     * test compiler plugin tag in template file
@@ -29,8 +29,8 @@ class CompileCompilerPluginTests extends PHPUnit_Framework_TestCase {
     {
         $this->smarty->registerPlugin(Smarty::PLUGIN_COMPILER,'compilerplugin', 'mycompilerplugin');
         $tpl = $this->smarty->createTemplate('compilerplugintest.tpl');
-        $this->assertEquals("Hello World", $this->smarty->fetch($tpl));
-    } 
+        $this->assertContains("Hello World", $this->smarty->fetch($tpl));
+    }
     /**
     * test compiler plugin tag in compiled template file
     */
@@ -39,12 +39,12 @@ class CompileCompilerPluginTests extends PHPUnit_Framework_TestCase {
         $this->smarty->force_compile = false;
         $this->smarty->registerPlugin(Smarty::PLUGIN_COMPILER,'compilerplugin', 'mycompilerplugin');
         $tpl = $this->smarty->createTemplate('compilerplugintest.tpl');
-        $this->assertEquals("Hello World", $this->smarty->fetch($tpl));
-    } 
-} 
+        $this->assertContains("Hello World", $this->smarty->fetch($tpl));
+    }
+}
 function mycompilerplugin($params, $compiler)
 {
     return '<?php echo \'Hello World\';?>';
-} 
+}
 
 ?>
