@@ -19,7 +19,7 @@ class ExtendsResourceTests extends PHPUnit_Framework_TestCase {
 
     public static function isRunnable()
     {
-        return true;
+        return false;
     }
 
     /**
